chat swagger added
